prevent prompts from being cut off

--- a/client/assets/styles/scss/views/views-toolbar.scss
+++ b/client/assets/styles/scss/views/views-toolbar.scss
@@ -21,6 +21,10 @@
 }
 
 // editor toolbar
+.views-toolbar-wrapper {
+  flex: 0 0 auto;
+}
+
 .views-toolbar {
   align-items: center;
   background: $purple-dark;
